# etf-cli

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml
src/unfccc/etf/: cli.py  countrydata.py  json.py  metadata.py  util.py
tests/: conftest.py  test_json.py  test_metadata.py
